--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -81,10 +81,32 @@ jobs:
         timeout-minutes: 340
         continue-on-error: true
 
+  quizbot3:
+    name: TSS-Atlas Bot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone The TSS-Atlas Bot Repo
+        run: git clone https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUG4 }} tssatlas
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+        timeout-minutes: 5
+        continue-on-error: false
+
+      - name: Install project dependencies and run TSS Bot
+        run: |
+          cd tssatlas
+          pip install -r requirements.txt
+          python main.py
+        timeout-minutes: 340
+        continue-on-error: true
+
 
   looper:
     name: Run QuizBot loop
-    needs: [quizbot1, quizbot2, pdfcsv]
+    needs: [quizbot1, quizbot2, pdfcsv, quizbot3]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
