--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -103,10 +103,35 @@ jobs:
         timeout-minutes: 340
         continue-on-error: true
 
+  quizbot4:
+    name: Atlas Advanced Bot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone The TSS-Atlas Bot Repo
+        run: git clone --branch Atlas https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUGATLAS }} tssatlas
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+        timeout-minutes: 5
+        continue-on-error: false
+
+      - name: Install project dependencies and run TSS Bot
+        run: |
+          cd tssatlas
+          sudo apt-get update
+          sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
+          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
+          pip install -r requirements.txt
+          python main.py
+        timeout-minutes: 340
+        continue-on-error: true
+
 
   looper:
     name: Run QuizBot loop
-    needs: [quizbot1, quizbot2, pdfcsv, quizbot3]
+    needs: [quizbot1, quizbot2, pdfcsv, quizbot3, quizbot4]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
