--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -106,25 +106,37 @@ jobs:
   quizbot4:
     name: Atlas Advanced Bot
     runs-on: ubuntu-latest
-    steps:
-      - name: Clone The TSS-Atlas Bot Repo
-        run: git clone --branch Atlas https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUGATLAS }} tssatlas
-
+    steps: 
+      - name: Clone The Repository
+        run: |
+          git clone --branch Atlas https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUGATLAS }} atlas
+          cd atlas
+        timeout-minutes: 5
+        continue-on-error: false
+        
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
         timeout-minutes: 5
         continue-on-error: false
-
-      - name: Install project dependencies and run TSS Bot
+          
+      - name: Install Python dependencies, Chromium & Poppler-utils
         run: |
-         cd tssatlas
-         sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
-         sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0
-         pip install -r requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
+          cd atlas
+          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
+          
+          pip install -r requirements.txt
+        timeout-minutes: 10
+        continue-on-error: false
+         
+      - name: Run the bot
+        run: |
+          cd atlas
           python main.py
-        timeout-minutes: 340
+        timeout-minutes: 340  # Almost 6 hours for the bot itself
         continue-on-error: true
 
 
