--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -59,26 +59,37 @@ jobs:
   pdfcsv:
     name: TSS PDF-CSV
     runs-on: ubuntu-latest
-    steps:
-      - name: Clone The TSS PDF-CSV Repo
-        run: git clone https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUG3 }} pdfcsv
-
+    steps: 
+      - name: Clone The Repository
+        run: |
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUG3 }} pdfcsv
+          cd pdfcsv
+        timeout-minutes: 5
+        continue-on-error: false
+        
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
         timeout-minutes: 5
         continue-on-error: false
-
-      - name: Install project dependencies and run TSS PDF-CSV
+          
+      - name: Install Python dependencies, Chromium & Poppler-utils
         run: |
-         cd pdfcsv
-         sudo apt-get update
-         sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
-         sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
-         pip install -r requirements.txt
-         python main.py
-        timeout-minutes: 340
+          sudo apt-get update
+          sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
+          cd pdfcsv
+          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
+          
+          pip install -r requirements.txt
+        timeout-minutes: 10
+        continue-on-error: false
+         
+      - name: Run the bot
+        run: |
+          cd pdfcsv
+          python main.py
+        timeout-minutes: 340  # Almost 6 hours for the bot itself
         continue-on-error: true
 
   quizbot3:
