--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -31,6 +31,9 @@ jobs:
           cd tss
           sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
           sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0
+          pip install playwright
+          playwright install
+          playwright install chromium
           pip install -r requirements.txt
           python main.py
         timeout-minutes: 340
