--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Install project dependencies and run TSS Bot
         run: |
           cd tss
+          sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
+          echo "deb http://archive.ubuntu.com/ubuntu jammy main universe" | sudo tee /etc/apt/sources.list
+          echo "deb http://security.ubuntu.com/ubuntu jammy-security main universe" | sudo tee -a /etc/apt/sources.list
+          sudo apt update
+          sudo apt --fix-broken install -y
           sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
           sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0
           pip install playwright
