Refactor workflow to rename clone directory and remove quizbot4
Updated the workflow to clone the repository as 'atlas' instead of 'tssatlas' and removed the 'quizbot4' job.

--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -107,7 +107,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone The TSS-Atlas Bot Repo
-        run: git clone https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.ATLAS }} tssatlas
+        run: git clone https://${{ env.username }}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.ATLAS }} atlas
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -118,7 +118,7 @@ jobs:
 
       - name: Install project dependencies and run TSS Bot
         run: |
-          cd tssatlas
+          cd atlas
           sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
           echo "deb http://archive.ubuntu.com/ubuntu jammy main universe" | sudo tee /etc/apt/sources.list
           echo "deb http://security.ubuntu.com/ubuntu jammy-security main universe" | sudo tee -a /etc/apt/sources.list
@@ -134,46 +134,10 @@ jobs:
         timeout-minutes: 340
         continue-on-error: true
 
-  quizbot4:
-    name: Atlas Advanced Bot
-    runs-on: ubuntu-latest
-    steps: 
-      - name: Clone The Repository
-        run: |
-          git clone --branch Atlas https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.REPOSLUGATLAS }} atlas
-          cd atlas
-        timeout-minutes: 5
-        continue-on-error: false
-        
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-        timeout-minutes: 5
-        continue-on-error: false
-          
-      - name: Install Python dependencies, Chromium & Poppler-utils
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
-          cd atlas
-          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
-          
-          pip install -r requirements.txt
-        timeout-minutes: 10
-        continue-on-error: false
-         
-      - name: Run the bot
-        run: |
-          cd atlas
-          python main.py
-        timeout-minutes: 340  # Almost 6 hours for the bot itself
-        continue-on-error: true
-
 
   looper:
     name: Run QuizBot loop
-    needs: [quizbot1, quizbot2, pdfcsv, quizbot3, quizbot4]
+    needs: [quizbot1, quizbot2, pdfcsv, quizbot3]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
