--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -121,7 +121,7 @@ jobs:
           cd atlas
           sudo apt-get update
           sudo apt-get install -y --fix-missing poppler-data libpoppler-dev poppler-utils
-          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0 \
+          sudo apt-get install -y libpango-1.0-0 libpangoft2-1.0-0
           pip install -r requirements.txt
           python main.py
         timeout-minutes: 340
